--- a/app/src/main/res/layout/activity_article_news.xml
+++ b/app/src/main/res/layout/activity_article_news.xml
@@ -1,54 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_height="192dp"
+        android:layout_width="match_parent">
 
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:toolbarId="@+id/toolbar"
+            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
+            app:contentScrim="?attr/colorPrimary">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+                <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"  />
+            </RelativeLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_width="match_parent"></android.support.v7.widget.Toolbar>
+        </android.support.design.widget.CollapsingToolbarLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_alignParentStart="false"
-        android:id="@+id/layout"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-        <TextView
-            android:text="12:00"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/anotation"
-            android:layout_alignParentStart="true"
-            android:id="@+id/dateAtricle"
-            android:textStyle="normal|italic"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp" />
 
-        <TextView
-            android:text="anotation"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/anotation"
-            android:layout_alignBottom="@+id/textArticle"
-            android:layout_alignParentStart="true"
-            android:textStyle="normal|bold"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp" />
-    </LinearLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/layout"
-        >
-        <TextView
-            android:text="очень длинный текст"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/textArticle"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="10dp"
-            android:layout_margin="10dp" />
-    </ScrollView>
-</RelativeLayout>
+            android:id="@+id/layout"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:text="anotation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/anotation"
+                android:layout_alignParentStart="true"
+                android:textStyle="normal|bold"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:textSize="20sp" />
+
+            <TextView
+                android:text="12:00"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:id="@+id/dateAtricle"
+                android:textStyle="normal|italic"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/anotation"
+                android:textSize="16sp" />
+
+            <TextView
+                android:text="очень длинный текст"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textArticle"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_below="@+id/dateAtricle"
+                android:layout_marginTop="10dp"
+                android:textSize="16sp" />
+        </RelativeLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
