--- a/app/src/main/res/layout/politic_card_view.xml
+++ b/app/src/main/res/layout/politic_card_view.xml
@@ -5,33 +5,53 @@
     android:layout_height="wrap_content"
     >
 
-
-    <RelativeLayout
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view_politics"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:transitionName="open_mediaplayer"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="3dp"
+        android:layout_height="100dp">
 
-        <TextView
-            android:text="12:00"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/time_politic"
-            android:layout_marginStart="35dp"
-            android:textStyle="normal|italic"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:text="Моя новость"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/title_politic"
-            android:textSize="24sp"
-            android:textStyle="normal|bold"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="22dp"
-            android:layout_below="@+id/time_politic"
-            android:layout_alignParentStart="true" />
-    </RelativeLayout>
+            <ImageView
+                app:srcCompat="?attr/selectableItemBackground"
+                android:layout_centerVertical="true"
+                android:layout_alignStart="@+id/card_view_politics"
+                android:id="@+id/image_politics"
+                android:layout_marginStart="5dp"
+                android:layout_width="120dp"
+                android:layout_height="90dp" />
+
+            <TextView
+                android:text="Моя новость"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/title_news_politics"
+                android:textSize="16sp"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/image_politics"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp" />
+
+            <TextView
+                android:text="12:00"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/time_news_politics"
+                android:textStyle="normal|italic"
+                android:textSize="12sp"
+                android:textColor="@android:color/darker_gray"
+                android:layout_alignBottom="@+id/image_politics"
+                android:layout_alignStart="@+id/title_news_politics" />
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
