--- a/app/src/main/res/layout/activity_article_news.xml
+++ b/app/src/main/res/layout/activity_article_news.xml
@@ -6,8 +6,8 @@
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
-        android:layout_height="192dp"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="220dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax"  />
+                    app:layout_collapseMode="none"  />
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
@@ -80,6 +80,14 @@
                 android:layout_below="@+id/dateAtricle"
                 android:layout_marginTop="10dp"
                 android:textSize="16sp" />
+
+            <ProgressBar
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/progressArticle" />
         </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
