--- a/app/src/main/res/layout/news_card_view.xml
+++ b/app/src/main/res/layout/news_card_view.xml
@@ -9,7 +9,7 @@
         android:id="@+id/card_view_all_news"
         android:layout_width="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:layout_margin="2dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:transitionName="open_mediaplayer"
         card_view:cardCornerRadius="4dp"
@@ -38,7 +38,8 @@
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/image_all_news"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp" />
+                android:layout_marginEnd="5dp"
+                android:fontFamily="sans-serif" />
 
             <TextView
                     android:text="12:00"
