--- a/app/src/main/res/layout/activity_article_news.xml
+++ b/app/src/main/res/layout/activity_article_news.xml
@@ -56,7 +56,8 @@
                 android:textStyle="normal|bold"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-condensed" />
 
             <TextView
                 android:text="12:00"
@@ -68,7 +69,8 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/anotation"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:fontFamily="sans-serif-condensed" />
 
             <TextView
                 android:text="очень длинный текст"
@@ -79,7 +81,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_below="@+id/dateAtricle"
                 android:layout_marginTop="10dp"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:fontFamily="sans-serif-condensed" />
 
             <ProgressBar
                 style="@style/Widget.AppCompat.ProgressBar"
