--- a/app/src/main/res/layout/news_card_view.xml
+++ b/app/src/main/res/layout/news_card_view.xml
@@ -14,11 +14,11 @@
         android:transitionName="open_mediaplayer"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="3dp"
-        android:layout_height="100dp">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 app:srcCompat="?attr/selectableItemBackground"
@@ -30,27 +30,29 @@
                 android:layout_height="90dp" />
 
             <TextView
-                android:text="Моя новость"
+                android:id="@+id/title_news"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_news"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/image_all_news"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
-                android:fontFamily="sans-serif" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/image_all_news"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Моя новость"
+                android:textSize="16sp" />
 
             <TextView
-                    android:text="12:00"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                android:text="12:00"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/time_news"
                 android:textStyle="normal|italic"
                 android:textSize="12sp"
                 android:textColor="@android:color/darker_gray"
-                android:layout_alignBottom="@+id/image_all_news"
-                android:layout_alignStart="@+id/title_news" />
+                android:layout_alignStart="@+id/title_news"
+                android:layout_below="@+id/title_news"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
