--- a/app/src/main/res/layout/politic_card_view.xml
+++ b/app/src/main/res/layout/politic_card_view.xml
@@ -9,16 +9,16 @@
         android:id="@+id/card_view_politics"
         android:layout_width="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:layout_margin="2dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:transitionName="open_mediaplayer"
         app:cardCornerRadius="4dp"
         app:cardElevation="3dp"
-        android:layout_height="100dp">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 app:srcCompat="?attr/selectableItemBackground"
@@ -38,7 +38,8 @@
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/image_politics"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp" />
+                android:layout_marginEnd="5dp"
+                android:fontFamily="sans-serif-condensed" />
 
             <TextView
                 android:text="12:00"
@@ -48,8 +49,10 @@
                 android:textStyle="normal|italic"
                 android:textSize="12sp"
                 android:textColor="@android:color/darker_gray"
-                android:layout_alignBottom="@+id/image_politics"
-                android:layout_alignStart="@+id/title_news_politics" />
+                android:layout_alignStart="@+id/title_news_politics"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_below="@+id/title_news_politics" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
