--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -1,18 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/title_photo_news"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:textSize="20sp"
+            android:fontFamily="casual"
+            android:textStyle="normal|bold" />
 
-   <TextView
-        android:text="FragmentPhoto "
+        <me.relex.circleindicator.CircleIndicator
+            android:id="@+id/indicator"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="false"
+            android:layout_alignStart="@+id/title_photo_news"
+            android:layout_alignBottom="@+id/pager" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/title_photo_news"
+            android:layout_alignParentEnd="false"
+            android:layout_height="250dp"
+            android:layout_width="match_parent" />
+
+    <TextView
+        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="79dp"
-        android:layout_marginTop="208dp"
-        android:id="@+id/textView" />
+        android:layout_below="@+id/indicator"
+        android:layout_alignStart="@+id/indicator"
+        android:layout_marginTop="5dp"
+        android:id="@+id/text_article_photo" />
 </RelativeLayout>
+
