--- a/app/src/main/res/layout/economic_card_view.xml
+++ b/app/src/main/res/layout/economic_card_view.xml
@@ -5,54 +5,72 @@
     android:layout_height="wrap_content"
     >
 
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_economic"
         android:layout_width="match_parent"
         android:layout_gravity="center"
         android:layout_margin="2dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:transitionName="open_mediaplayer"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="3dp"
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="3dp"
         android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                app:srcCompat="?attr/selectableItemBackground"
-                android:layout_centerVertical="true"
-                android:layout_alignStart="@+id/card_view_economic"
-                android:id="@+id/image_economic"
-                android:layout_marginStart="5dp"
+            <android.support.v7.widget.CardView
                 android:layout_width="120dp"
-                android:layout_height="90dp" />
+                android:layout_margin="2dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="3dp"
+                android:layout_height="90dp"
+                android:id="@+id/card_view">
+                <ImageView
+                    app:srcCompat="?attr/selectableItemBackground"
+                    android:layout_centerVertical="true"
+                    android:layout_alignStart="@+id/card_view_economic"
+                    android:id="@+id/image_economic"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </android.support.v7.widget.CardView>
 
-            <TextView
-                android:text="Моя новость"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_news_economic"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/image_economic"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:fontFamily="sans-serif-condensed" />
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/cardView"
+                android:layout_marginStart="125dp">
 
-            <TextView
-                android:text="12:00"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/time_news_economic"
-                android:textStyle="normal|italic"
-                android:textSize="12sp"
-                android:textColor="@android:color/darker_gray"
-                android:layout_alignStart="@+id/title_news_economic"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/title_news_economic" />
+                <TextView
+                    android:id="@+id/title_news_economic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="Моя новость"
+                    android:textSize="16sp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp" />
+
+                <TextView
+                    android:text="12:00"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/time_news_economic"
+                    android:textStyle="normal|italic"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/darker_gray"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_below="@+id/title_news_economic"
+                    android:layout_alignStart="@+id/title_news_economic"
+                    android:layout_alignParentBottom="false"
+                    android:layout_centerHorizontal="false" />
+            </RelativeLayout>
+
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
