--- a/app/src/main/res/layout/news_card_view.xml
+++ b/app/src/main/res/layout/news_card_view.xml
@@ -5,16 +5,19 @@
     android:layout_height="wrap_content"
     >
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
         android:id="@+id/card_view_all_news"
         android:layout_width="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="2dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:transitionName="open_mediaplayer"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="3dp"
-        android:layout_height="wrap_content">
+        app:cardCornerRadius="4dp"
+        app:cardElevation="3dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -24,17 +27,32 @@
                     android:layout_width="120dp"
                     android:layout_margin="2dp"
                     android:foreground="?android:attr/selectableItemBackground"
-                    card_view:cardCornerRadius="4dp"
-                    card_view:cardElevation="3dp"
+                    app:cardCornerRadius="4dp"
+                    app:cardElevation="3dp"
                     android:layout_height="90dp"
                     android:id="@+id/card_view">
-                        <ImageView
+
+                <ImageView
                             app:srcCompat="?attr/selectableItemBackground"
                             android:layout_centerVertical="true"
                             android:layout_alignStart="@+id/card_view_all_news"
                             android:id="@+id/image_all_news"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        app:srcCompat="@drawable/video"
+                        android:id="@+id/video"
+                        android:layout_height="50dp"
+                        android:layout_width="50dp"
+                        android:layout_centerInParent="true"
+                        android:alpha="0.8"/>
+                </RelativeLayout>
+
             </android.support.v7.widget.CardView>
 
             <RelativeLayout
