--- a/app/src/main/res/layout/fragment_economic.xml
+++ b/app/src/main/res/layout/fragment_economic.xml
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout_economic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true">
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view_economic"
+                android:id="@+id/recycler_view_economics"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentTop="true" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+                android:layout_alignParentTop="true"
+                android:scrollbars="vertical"
+                android:scrollbarSize="5dp"/>
 
+            <ProgressBar
+                android:id="@+id/progressBarEconomic"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="65dp"
+                android:layout_alignParentBottom="true" />
+        </RelativeLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
