--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -5,7 +5,8 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/pager">
+        android:layout_below="@+id/pager"
+        android:layout_marginBottom="55dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -56,5 +57,5 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="false"
         android:layout_centerInParent="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="65dp" />
 </RelativeLayout>
