--- a/app/src/main/res/layout/fragment_world.xml
+++ b/app/src/main/res/layout/fragment_world.xml
@@ -11,13 +11,29 @@
         android:paddingTop="10dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view_world"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentTop="true" />
+                android:layout_alignParentTop="true"
+                android:scrollbars="vertical"
+                android:scrollbarSize="5dp"/>
+
+            <ProgressBar
+                android:id="@+id/progressBarWorld"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="65dp"
+                android:layout_alignParentBottom="true" />
+
+        </RelativeLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
