--- a/app/src/main/res/layout/news_card_view.xml
+++ b/app/src/main/res/layout/news_card_view.xml
@@ -5,65 +5,47 @@
     android:layout_height="wrap_content"
     >
 
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_all_news"
         android:layout_width="match_parent"
         android:layout_gravity="center"
+        android:layout_margin="2dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:transitionName="open_mediaplayer"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="3dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="3dp"
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.CardView
-                    android:layout_width="120dp"
-                    android:layout_margin="2dp"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="4dp"
-                    app:cardElevation="3dp"
-                    android:layout_height="90dp"
-                    android:id="@+id/card_view">
-
+                android:layout_width="120dp"
+                android:layout_margin="2dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="3dp"
+                android:layout_height="90dp"
+                android:id="@+id/card_view">
                 <ImageView
-                            app:srcCompat="?attr/selectableItemBackground"
-                            android:layout_centerVertical="true"
-                            android:layout_alignStart="@+id/card_view_all_news"
-                            android:id="@+id/image_all_news"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
-
-                <RelativeLayout
+                    app:srcCompat="?attr/selectableItemBackground"
+                    android:layout_centerVertical="true"
+                    android:layout_alignStart="@+id/card_view_all_news"
+                    android:id="@+id/image_all_news"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        app:srcCompat="@drawable/video"
-                        android:id="@+id/video"
-                        android:layout_height="50dp"
-                        android:layout_width="50dp"
-                        android:layout_centerInParent="true"
-                        android:alpha="0.8"/>
-                </RelativeLayout>
-
+                    android:layout_height="match_parent" />
             </android.support.v7.widget.CardView>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/cardView"
+                android:layout_toEndOf="@+id/card_view_all_news"
                 android:layout_marginStart="125dp">
 
                 <TextView
-                    android:id="@+id/title_news"
+                    android:id="@+id/title_news_all_news"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed"
@@ -76,14 +58,14 @@
                     android:text="12:00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/time_news"
+                    android:id="@+id/time_news_all_news"
                     android:textStyle="normal|italic"
                     android:textSize="12sp"
                     android:textColor="@android:color/darker_gray"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
-                    android:layout_below="@+id/title_news"
-                    android:layout_alignStart="@+id/title_news"
+                    android:layout_below="@+id/title_news_all_news"
+                    android:layout_alignStart="@+id/title_news_all_news"
                     android:layout_alignParentBottom="false"
                     android:layout_centerHorizontal="false" />
             </RelativeLayout>
