--- a/app/src/main/res/layout/photo_activity.xml
+++ b/app/src/main/res/layout/photo_activity.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
 
     <android.support.v4.widget.NestedScrollView
@@ -9,11 +11,35 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/pager">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/title_photo_news"
+                android:layout_height="250dp"
+                android:fitsSystemWindows="true"
+                android:layout_width="match_parent">
+
+
+            </android.support.v4.view.ViewPager>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout_photo_slider"
+                android:layout_height="match_parent"
+                app:tabBackground="@drawable/tab_selector"
+                app:tabIndicatorHeight="0dp"
+                android:layout_alignParentBottom="false"
+                android:layout_alignBottom="@+id/pager"
+                app:tabGravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_width="100dp" />
 
             <TextView
                 android:text="TextView"
@@ -26,39 +52,29 @@
                 android:textStyle="normal|bold"
                 android:textSize="18sp" />
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/pager"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/title_photo_news"
-                android:layout_height="250dp"
-                android:layout_width="match_parent"
-                android:fitsSystemWindows="true"
-                />
-
             <TextView
                 android:text="TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/indicator"
-                android:layout_alignStart="@+id/indicator"
+                android:layout_below="@+id/pager"
                 android:layout_marginTop="5dp"
                 android:id="@+id/text_article_photo"
                 android:layout_marginStart="5dp"
                 android:fontFamily="serif" />
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
+
     <ProgressBar
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressPhoto"
+        android:layout_marginTop="60dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="false"
-        android:layout_centerInParent="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="154dp" />
 </RelativeLayout>
 
