--- a/app/src/main/res/layout/fragment_all_news.xml
+++ b/app/src/main/res/layout/fragment_all_news.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     >
 
 
@@ -15,7 +16,9 @@
         android:layout_alignParentRight="true">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+
+            >
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view_all_news"
                 android:layout_width="match_parent"
