--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="80dp">
+    android:layout_marginBottom="60dp">
 
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/pager">
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -31,10 +31,10 @@
             </android.support.v4.view.ViewPager>
 
             <android.support.design.widget.TabLayout
-                        android:id="@+id/tab_layout_photo_slider"
+                android:id="@+id/tab_layout_photo_slider"
                 android:layout_height="match_parent"
-                        app:tabBackground="@drawable/tab_selector"
-                        app:tabIndicatorHeight="0dp"
+                app:tabBackground="@drawable/tab_selector"
+                app:tabIndicatorHeight="0dp"
                 android:layout_alignParentBottom="false"
                 android:layout_alignBottom="@+id/pager"
                 app:tabGravity="center"
@@ -42,25 +42,24 @@
                 android:layout_width="100dp" />
 
             <TextView
-                    android:text="TextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/title_photo_news"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginStart="5dp"
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/title_photo_news"
                 android:fontFamily="serif"
                 android:textStyle="normal|bold"
-                android:textSize="18sp" />
+                android:textSize="20sp"
+                android:layout_margin="5dp" />
 
             <TextView
                 android:text="TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/pager"
-                android:layout_marginTop="5dp"
                 android:id="@+id/text_article_photo"
-                android:layout_marginStart="5dp"
-                android:fontFamily="serif" />
+                android:fontFamily="serif"
+                android:layout_margin="5dp"
+                android:textSize="16sp" />
 
 
         </RelativeLayout>
