--- a/app/src/main/res/layout/news_card_view.xml
+++ b/app/src/main/res/layout/news_card_view.xml
@@ -11,14 +11,14 @@
         android:layout_gravity="center"
         android:layout_margin="2dp"
         android:foreground="?android:attr/selectableItemBackground"
-        android:transitionName="open_mediaplayer"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="3dp"
         android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <android.support.v7.widget.CardView
                 android:layout_width="120dp"
@@ -28,6 +28,7 @@
                 card_view:cardElevation="3dp"
                 android:layout_height="90dp"
                 android:id="@+id/card_view">
+
                 <ImageView
                     app:srcCompat="?attr/selectableItemBackground"
                     android:layout_centerVertical="true"
@@ -35,13 +36,13 @@
                     android:id="@+id/image_all_news"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
+
             </android.support.v7.widget.CardView>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/card_view_all_news"
                 android:layout_marginStart="125dp">
 
                 <TextView
