--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -5,7 +5,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/pager"
+        android:layout_below="@+id/pagerArticles"
         android:layout_marginBottom="55dp">
         <LinearLayout
             android:layout_width="match_parent"
