--- a/app/src/main/res/layout/video_activity.xml
+++ b/app/src/main/res/layout/video_activity.xml
@@ -5,7 +5,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/pager">
+        android:layout_below="@+id/pagerArticles">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
