--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -11,16 +11,26 @@
             android:layout_height="match_parent"
             android:orientation="vertical" >
 
+            <ProgressBar
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressVideo"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="false"
+                android:layout_centerInParent="true" />
+
             <TextView
                 android:text="annotation_video"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:id="@+id/annotation_video"
-                android:textSize="20sp"
+                android:textSize="24sp"
                 android:fontFamily="serif"
                 android:textStyle="normal|bold"
-                android:layout_margin="5dp" />
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="13dp"
+                android:layout_marginTop="5dp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -32,7 +42,7 @@
             android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
             android:id="@+id/youtubesupportfragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="5dp" />
 
     </RelativeLayout>
@@ -43,17 +53,10 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/text_video"
                 android:layout_below="@+id/layout"
-                android:textSize="16sp"
-                android:layout_margin="5dp" />
+                android:textSize="17sp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="13dp"
+                android:layout_marginLeft="13dp" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-    <ProgressBar
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressVideo"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="false"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="65dp" />
 </RelativeLayout>
