--- a/app/src/main/res/layout/activity_article_news.xml
+++ b/app/src/main/res/layout/activity_article_news.xml
@@ -42,7 +42,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
-        android:id="@+id/neestedscroll">
+        android:id="@+id/neestedscroll"
+        android:layout_marginStart="13dp"
+        android:layout_marginEnd="13dp">
 
 
         <RelativeLayout
@@ -59,8 +61,6 @@
                 android:textStyle="normal|bold"
                 android:textSize="24sp"
                 android:fontFamily="sans-serif-condensed"
-                android:layout_marginRight="13dp"
-                android:layout_marginLeft="13dp"
                 android:layout_marginTop="5dp" />
 
             <TextView
@@ -74,20 +74,17 @@
                 android:textSize="16sp"
                 android:fontFamily="sans-serif-condensed"
                 android:textColor="@color/colorAccent"
-                android:layout_marginLeft="13dp"
                 android:layout_marginTop="5dp" />
 
             <TextView
                 android:text="очень длинный текст"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/textArticle"
                 android:layout_below="@+id/dateAtricle"
                 android:textSize="17sp"
                 android:fontFamily="sans-serif-condensed"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="13dp"
-                android:layout_marginLeft="13dp" />
+                android:layout_marginTop="5dp" />
 
             <LinearLayout
                 android:orientation="vertical"
