--- a/app/src/main/res/layout/activity_article_news_pager.xml
+++ b/app/src/main/res/layout/activity_article_news_pager.xml
@@ -5,15 +5,13 @@
     android:layout_height="match_parent"
     >
 
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pagerArticles"
+    <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
+        android:id="@+id/list"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:layout_width="match_parent">
-
-
-    </android.support.v4.view.ViewPager>
-
+        app:rvp_triggerOffset="0.2"
+        app:rvp_singlePageFling="true"
+        android:clipToPadding="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 </RelativeLayout>
 
