--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -1,12 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.activity.MainActivityOnlyArticles">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/pagerArticles">
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" >
@@ -16,7 +17,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/progressVideo"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentStart="false"
                 android:layout_centerInParent="true" />
 
@@ -36,27 +36,39 @@
                 android:layout_width="match_parent"
                 android:layout_below="@+id/annotation_video"
                 android:id="@+id/layout"
-                android:layout_height="235dp">
+                android:layout_height="235dp"
+                android:layout_marginTop="5dp">
 
-        <fragment
-            android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
-            android:id="@+id/youtubesupportfragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp" />
+                <com.google.android.youtube.player.YouTubePlayerView
+                    android:id="@+id/youtube_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
     </RelativeLayout>
+
+            <TextView
+                android:text="12:00"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:id="@+id/dateAtricle"
+                android:textStyle="normal|italic"
+                android:layout_below="@+id/layout"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif-condensed"
+                android:textColor="@color/colorAccent"
+                android:layout_marginLeft="13dp"/>
 
             <TextView
                 android:text="text_video"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/text_video"
-                android:layout_below="@+id/layout"
+                android:layout_below="@+id/dateAtricle"
                 android:textSize="17sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="13dp"
                 android:layout_marginLeft="13dp" />
-        </LinearLayout>
+        </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 </RelativeLayout>
